<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.LoanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupLoanForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="materialTextView4,btnApply,tilLastName,materialTextView5,
            tilUntil,tilPhoneNumber,tilFirstName,tilAmount"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff4f378b"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/white"
            app:title="Request a Loan"
            app:titleCentered="true"
            app:titleTextColor="@color/white">

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/bank"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/bank_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_sber"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView2"
            app:layout_constraintEnd_toStartOf="@+id/materialTextView2"
            app:layout_constraintTop_toTopOf="@+id/materialTextView2"
            app:shapeAppearanceOverlay="@style/CircleShapeImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/sber"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/percent"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLoanPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView3"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView2"
            app:layout_constraintTop_toTopOf="@+id/materialTextView3"
            tools:text="15%" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/first_name"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/tilFirstName"
            app:layout_constraintStart_toStartOf="@+id/tilFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tilFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/tilLastName"
            app:layout_constraintStart_toStartOf="@+id/tilLastName"
            app:layout_constraintTop_toBottomOf="@+id/tilLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/amount"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tilAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tilAmount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/ruble_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialTextView4"
            app:layout_constraintTop_toBottomOf="@+id/tilPhoneNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/until"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tilUntil"
            app:layout_constraintStart_toStartOf="@+id/materialTextView4"
            app:layout_constraintTop_toBottomOf="@+id/tilAmount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUntil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="@+id/tilAmount"
            app:layout_constraintStart_toStartOf="@+id/tilAmount"
            app:layout_constraintTop_toBottomOf="@+id/tilAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieUntil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                tools:text="18.07.2022" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilUntil"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminate="true"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
            tools:visibility="invisible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currently_unavailable"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>